# svaeva-sdk

./: .gitignore  Blue_paper.json  README.md  SECURITY.md  costume_llm.py  exemples.py  fuzz_bot.py  pyproject.toml  tests.py
Docs/: Main.md
Docs/DataBase/Actions/: README.md
Docs/DataBase/Groups/: README.md
Docs/DataBase/Users/: README.md
Docs/MultiAPI/Configs/: README.md
Docs/MultiAPI/DataModels/: README.md
Docs/MultiAPI/Skeletons/: README.md
Docs/MultiAPI/Virtual Bound/: README.md
Docs/MultiAPI/Virtual-Bound/: README.md
Docs/MultiAPI/Wallets/: README.md
svaeva/: __init__.py
svaeva/Paths/: __init__.py
svaeva/Paths/DB/: __init__.py
svaeva/Paths/DB/Actions/: __init__.py
svaeva/Paths/DB/Groups/: __init__.py
svaeva/Paths/DB/Users/: __init__.py
svaeva/Paths/MultiAPI/: __init__.py
svaeva/Paths/MultiAPI/Configs/: __init__.py
svaeva/Paths/MultiAPI/Forward/: __init__.py
svaeva/Paths/MultiAPI/Models/: README.md  __init__.py
svaeva/Paths/MultiAPI/Models/Exceptions/: __init__.py
svaeva/Paths/MultiAPI/Skeletons/: __init__.py
svaeva/Paths/MultiAPI/VirtualBond/: __init__.py
svaeva/Paths/MultiAPI/Wallet/: __init__.py
