[tool.poetry]
name = "svaeva"
version = "0.1.0"
description = ""
authors = ["Vortex5Root"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
vrest = {git = "https://github.com/Vortex5Root/VRest.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
